--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,10 @@
     font-family: 'Italianno', cursive;
     padding: 1rem;
     background: rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 0px 0px 43px 39px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 43px 39px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 43px 39px rgba(0,0,0,0.75),
+    -webkit-box-shadow: 0px 0px 100px 100px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 50px 50px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 100px 100px rgba(0,0,0,0.75);
+    background-size:10em;
 }
 .centro {
   font-size: 1.5em;
@@ -131,6 +132,7 @@
   padding: 1vw;
   text-align: right;
 }
+
 
 
 
